--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
         "dotenv": "^16.4.5",
         "express": "^4.20.0",
         "express-session": "^1.18.1",
+        "ioredis": "^5.6.1",
         "jsonwebtoken": "^9.0.2",
         "mailtrap": "^3.4.0",
         "nodemailer": "^6.9.15",
