--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,9 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-        "dev": "nodemon index.js"
+        "dev": "nodemon index.js",
+        "start": "node index.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
     "author": "",
@@ -12,12 +14,14 @@
     "description": "",
     "dependencies": {
         "argon2": "^0.41.1",
-        "bcryptjs": "^2.4.3",
         "cookie-parser": "^1.4.6",
+        "cors": "^2.8.5",
         "crypto": "^1.0.1",
         "dotenv": "^16.4.5",
         "express": "^4.20.0",
+        "express-rate-limit": "^7.5.0",
         "express-session": "^1.18.1",
+        "helmet": "^8.1.0",
         "ioredis": "^5.6.1",
         "jsonwebtoken": "^9.0.2",
         "mailtrap": "^3.4.0",
@@ -27,6 +31,8 @@
         "pg": "^8.14.1",
         "pg-hstore": "^2.3.4",
         "sequelize": "^6.37.7",
+        "swagger-jsdoc": "^6.2.8",
+        "swagger-ui-express": "^5.0.1",
         "winston": "^3.17.0"
     },
     "devDependencies": {
