--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "description": "",
     "dependencies": {
         "argon2": "^0.41.1",
+        "aws-sdk": "^2.1692.0",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "crypto": "^1.0.1",
@@ -25,6 +26,7 @@
         "ioredis": "^5.6.1",
         "jsonwebtoken": "^9.0.2",
         "mailtrap": "^3.4.0",
+        "multer": "^1.4.5-lts.2",
         "nodemailer": "^6.9.15",
         "passport": "^0.7.0",
         "passport-google-oauth20": "^2.0.0",
